syntax = "proto2";

package reviewservice;

service ReviewService {
    rpc SaveReview(NewReviewRequest) returns (ReviewId) {}
    rpc SaveReviews(stream NewReviewRequest) returns (stream ReviewId) {}
    rpc GetReview(GetReviewRequest) returns (Review) {}
    rpc GetTopReviews(GetTopReviewsRequest) returns (stream Review) {}
    rpc RateReview(RateReviewRequest) returns (Empty) {}
}

message Review {
    required string Text = 1;
    required int32 Star = 2;
    required string ReviewID = 3;
    required string ProductID = 4;
    required string UserID = 5;
}

message NewReviewRequest {
    required Review review = 1;
}
   
message ReviewId {
    required string reviewId = 1;
}

message GetReviewRequest {
    required string reviewID = 1;
}

message GetTopReviewsRequest {
    required int32 count = 1;
}

message RateReviewRequest {
    required string reviewId = 1;
    required int32 star = 2;
}

message Empty {}